tests/parse_only/errors/syn_lex/e12.src
.IPPcode21

NOT GF@a bool@false bool@true
